Bug 1149412 - Remove bad assertion. r=mchang